# PyLEADER

./: .gitattributes  .gitignore  DevelopmentNotes.md  README.md  TODO.md  make_LEADER_obs_files.ipynb  make_LEADER_obs_files_sandbox.py  pyproject.toml  requirements.txt
Jupyter_Notebook_Testbeds/: InnerMassaliaFamilySearch.ipynb  LEADER_python_forcedN.ipynb
docs/plans/: correction_v2_posterior_and_unfolding.md
pyleader/: __init__.py  analysis.py  config.py  inversion.py  lightcurve.py  naming.py  obsio.py  pipeline.py  plotting.py  populations.py  postprocess.py
pyleader/cli/: __init__.py  basis_runs.py  bias_map.py  build_obs_files.py  compare_populations.py  download_models.py  fit_correction.py  plot_bias_map.py  plot_sweep.py  run_analysis.py  run_population.py  run_synthetic.py  spot_check.py  sweep_synthetic.py  unfold_analysis.py
pyleader/obsfiles/: __init__.py  build.py  columns.py  curl.py  ephemeris.py  irsa.py  naming.py  photometry.py
pyleader/synthetic/: __init__.py  basis.py  bias_map.py  bias_map_plots.py  brightness.py  compare.py  config.py  correction.py  damit.py  ellipsoid.py  geometry.py  noise.py  plots.py  population.py  posterior.py  scattering.py  stats.py  sweep.py  sweep_plots.py  unfold.py
pyleader/synthetic/data/: correction_function.json
scripts/: basis_runs.py  bias_map.py  build_obs_files.py  compare_populations.py  download_models.py  fit_correction.py  plot_bias_map.py  plot_sweep.py  run_analysis.py  run_population.py  run_synthetic.py  spot_check.py  sweep_synthetic.py  unfold_analysis.py
